fixed width issue with overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,6 @@
 
 .App{
     background-color: black;
+    width: 100%;
     height: 100vh;
-    width: 100vw;
 }
