--- a/src/components/Editing.scss
+++ b/src/components/Editing.scss
@@ -2,7 +2,7 @@
 .editPage{
     &_main{
         display: flex;
-        width: 100vw;
+        width: 100%;
         justify-content: space-around;
     }
     &_container{
