--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -9,13 +9,15 @@
 
 .header_container{
     width: 100%;
-    height: 15%;
+    height: 10%;
     position: sticky;
+    top: 0;
     background-color:  #FAF9F6;
     animation: fadeIn 3s ease;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .header_title{
