--- a/src/components/Homepage.scss
+++ b/src/components/Homepage.scss
@@ -6,6 +6,7 @@
     }
     &_landingpage{
         display: block;
+        width: 100%;
 
     }
     &_landingpage-hidden{
