--- a/src/components/Intro.scss
+++ b/src/components/Intro.scss
@@ -79,7 +79,7 @@
 
 .intro_main{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: black;
     display: flex;
     justify-content: center;
