--- a/src/components/LandingPage.scss
+++ b/src/components/LandingPage.scss
@@ -1,5 +1,5 @@
 .landingPage_main{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: 9;
 
