--- a/src/components/MainPage.scss
+++ b/src/components/MainPage.scss
@@ -9,12 +9,19 @@
 
 .mainPage{
     &_container{
-        width: 70%;
+        width: 100%;
+        height: 200vh;
         display: flex;
-        justify-content: space-around;
+        flex-direction: column;
+        align-items: center;
         margin-top: 5%; 
 
         
+    }
+    &_profile{
+        display: flex;
+        justify-content: space-between;
+        width: 70%;
     }
     &_profilePic{
         width: 25em;
@@ -25,31 +32,31 @@
 
     }
     &_bio_box{
-        width: 20em;
+        width: 25em;
         height: 25em;
         // background-color: white;
         color: #cfcdc6;
-        margin-left: -15%;
+        margin-right: 5rem;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         animation: 3s fadeIn ease;
         &_tag{
             font-size: 3rem;
+            height: 30%;
         }
         &_mainText{
+            height: 70%;
          
 
         }
     }
     &_audio{
-        width: 25em;
-        // height: 15em;
-        position:absolute;
+        height: 15em;
+        position:sticky;
         right: 2%;
         top: 17%;
         animation: 3s fadeIn ease;
-        // background-color: white;
         &_musicPlayer{
 
         }
@@ -57,4 +64,7 @@
 
         }
     }
+}
+.blank{
+    height: 10rem;
 }
